# NetPLC-HacDC-Firmware

./: .gitmodules  CMakeLists.txt  NetPLC_Term.sh  README  build.sh  clean.sh  license.txt  test.sh
cmake/Platform/: Arduino.cmake
include/: .gitignore  NetPLC_Analog.h
lib/: CMakeLists.txt  EEPROMex
lib/EDB/: EDB.cpp
lib/EDB/examples/EDB_24XX512/: EDB_24XX512.pde
lib/EDB/examples/EDB_AT24C1024/: EDB_AT24C1024.pde
lib/EDB/examples/EDB_Internal_EEPROM/: EDB_Internal_EEPROM.pde
lib/EDB/examples/EDB_Simple/: EDB_Simple.pde
src/: CMakeLists.txt
src/Blink/: Blink.ino
src/CLI/: CLI.ino
src/RFID/: RFID.ino
src/WebUI/: WebUI.ino
